GGG-78 condition on multi table interface